# Haskell_Project

haskell stack项目/: README.md  Report_Functional_Programming.odt  groupproject.cabal  jaccard report.docx  movies.db  stack.yaml
haskell stack项目/app/: Main.hs
haskell stack项目/docs/: DataBaseModule.html  DataStructures.html  HTTPRequestModule.html  HTTPRequestModule2.html  IOActionModule.html  JSONParserModule.html  Main.html  doc-index.html  index-frames.html  index.html  mini_DataBaseModule.html  mini_DataStructures.html  mini_HTTPRequestModule.html  mini_HTTPRequestModule2.html  mini_IOActionModule.html  mini_JSONParserModule.html  mini_Main.html
haskell stack项目/docs/src/: DataBaseModule.html  DataStructures.html  HTTPRequestModule.html  HTTPRequestModule2.html  IOActionModule.html  JSONParserModule.html  Main.html
haskell stack项目/src/: DataBase.hs  DataStructures.hs  HTTPRequest.hs  IO.hs  JSONParser.hs
haskell stack项目/test/: Spec.hs
